--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -21,7 +21,7 @@
         style="@style/Value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="24dp"
         android:hint="ex) 홍길동"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
     <TextView
-        android:id="@+id/et_birthhDayValue"
+        android:id="@+id/tv_birthhDayValue"
         style="@style/Value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -68,12 +68,10 @@
 
     <RadioGroup
         android:id="@+id/rg_bloodType"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:gravity="end"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@id/tv_bloodType"
-        app:layout_constraintEnd_toStartOf="@id/spinner_bloodType"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintTop_toTopOf="@id/tv_bloodType">
 
@@ -92,10 +90,11 @@
 
     <Spinner
         android:id="@+id/spinner_bloodType"
-        android:layout_width="70dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/tv_bloodType"
         app:layout_constraintEnd_toEndOf="@id/et_nameValue"
+        app:layout_constraintStart_toEndOf="@id/rg_bloodType"
         app:layout_constraintTop_toTopOf="@id/tv_bloodType" />
 
     <TextView
@@ -131,8 +130,8 @@
         android:id="@+id/cb_warning"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="주의사항 보기"
         android:gravity="end|center_vertical"
+        android:text="주의사항 보기"
         app:layout_constraintBottom_toBottomOf="@id/tv_warning"
         app:layout_constraintEnd_toEndOf="@id/et_nameValue"
         app:layout_constraintStart_toStartOf="@id/guideLine"
@@ -144,9 +143,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="주의사항"
-        app:layout_constraintTop_toBottomOf="@id/cb_warning"
         app:layout_constraintEnd_toEndOf="@id/et_nameValue"
-        app:layout_constraintStart_toStartOf="@id/guideLine" />
+        app:layout_constraintStart_toStartOf="@id/guideLine"
+        app:layout_constraintTop_toBottomOf="@id/cb_warning" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideLine"
@@ -154,4 +153,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.4" />
+
+    <androidx.constraintlayout.helper.widget.Layer
+        android:id="@+id/birthDatelayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="et_birthhDayValue,iv_birthdate"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
