[Feat] - 데이터 저장(SharedPreference)
- SharedPreference: 저장하려는 데이터 양이 적을 경우
- Activity 생명주기를 고려한 데이터 및 UI 업데이트
- 상수 전용 파일 생성

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -160,4 +160,14 @@
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="et_birthhDayValue,iv_birthdate"
         tools:ignore="MissingConstraints" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/bnt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="36dp"
+        android:clickable="true"
+        android:src="@drawable/baseline_save_alt_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
