--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -158,7 +158,7 @@
         android:id="@+id/birthDatelayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="et_birthhDayValue,iv_birthdate"
+        app:constraint_referenced_ids="tv_birthhDayValue,iv_birthdate"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
