--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -142,7 +142,7 @@
         style="@style/Value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="주의사항"
+        android:hint="주의사항"
         app:layout_constraintEnd_toEndOf="@id/et_nameValue"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintTop_toBottomOf="@id/cb_warning" />
@@ -154,13 +154,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.4" />
 
-    <androidx.constraintlayout.helper.widget.Layer
-        android:id="@+id/birthDatelayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="tv_birthhDayValue,iv_birthdate"
-        tools:ignore="MissingConstraints" />
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/bnt_save"
         android:layout_width="wrap_content"
@@ -170,4 +163,11 @@
         android:src="@drawable/baseline_save_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.helper.widget.Layer
+        android:id="@+id/birthDatelayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="tv_birthhDayValue,iv_birthdate"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
